# coretool

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements  uploadpypi.sh
src/: __init__.py  admin.py  apps.py  base.py  fields.py  pstruct.py
src/admins/: cronjobs.py  errors.py
src/checks/: complexmodelcheck.py
src/controllers/: __init__.py  cronjobs.py
src/controllers/addedbyuser/: middleware.py
src/controllers/apitools/: ApiRestAbstractController.py  ApiRestStandard.py  apibasiccontroller.py  apirestbase.py  crudbasic.py
src/controllers/cronjobsf/: pathjobs.py
src/controllers/tools/: __init__.py  barcodegen.py  base.py  classes.py  csv.py  datetime.py  files.py  net.py  response.py  validators.py
src/coretool/: __init__.py  api.py
src/coretool/addedbyuser/: fields.py
src/coretool/apitools/: __init__.py  crudbasic.py
src/coretool/multi/: asyncio.py  futures.py  threading.py
src/coretool/tools/: __init__.py  dbsync.py  decorators.py  files.py  filters.py  images.py  json.py  objects.py  response.py  strings.py  validators.py
src/coretool/users/: users.py
src/coretool_app/: __init__.py  base.py
src/coretool_app/admins/: __init__.py  cronjobs.py
src/coretool_app/checks/: __init__.py  messages.py
src/coretool_app/controllers/: __init__.py  cronjobs.py  errors.py  pstruct.py
src/coretool_app/models/: errors.py
src/coretool_middlewares/: __init__.py
src/dev/middlewares/: cors.py
src/management/commands/: initialset.py
src/models/: __init__.py  cronjobs.py  errors.py
src/templatetags/: admintags.py
tests/: test_example1.py
(+32 files in other folders)
